trying to get a modal editor for recoveries...

--- a/webservice/templates/campaign_definition_edit.html
+++ b/webservice/templates/campaign_definition_edit.html
@@ -77,12 +77,13 @@
 	<td id="cdf_script_{{loop.index}}">{{row.CampaignDefinition.launch_script|replace("None","")}}</td>
 	<td id="cdf_definition_{{loop.index}}">{{row.CampaignDefinition.definition_parameters|replace("None","")}}</td>
 	<td id="cdf_recovery_{{loop.index}}">
- 
+            [
             {%for recov in data.recoveries %}
               {%if recov.campaign_definition_id == row.CampaignDefinition.campaign_definition_id %}
-                 {{recov.recovery_order}}.{{recov.recovery_type.name}}
+                 "{{recov.recovery_type.name}}"{%if not loop.last%},{%endif%}
               {%endif%}
             {%endfor%}
+            ]
        </td>
       </tr>
       {% endfor %}
@@ -169,7 +170,7 @@
       <div class="one field">
 	<div class="field">
            <label>Recovery Launches <i class="large edit link blue icon" id="edit_recovery_modal_btn"></i></label>
-          <textarea id="ae_definition_recovery_text" disabled>[]</textarea>
+          <textarea id="ae_definition_recovery_text" disabled></textarea>
         </div>
       </div>
       <div class="actions">
@@ -219,6 +220,28 @@
   <div class="ui hidden divider"></div>
 </div> <!-- Ends edit_param_modal  -->
 
+<div class="ui small modal" id="edit_recovery_modal">
+  <i class="close icon"></i>
+  <div class="header">
+    Definition Recovery Editor
+  </div>
+  <div class="ui text container">
+    <div class="scrollable">
+       <ol>
+         {% for i in range(10) %}
+         <li> 
+             <select id="re_recover_{{i}}">
+                <option value="None">-</option>
+                {% for rtype in data.rtypes %}
+                <option value="{{rtype}}">{{rtype}}</option>
+                {% endfor %}
+             </select>
+         {%endfor%}
+       </ol>
+    </div>
+  </div>
+  <div class="ui hidden divider"></div>
+</div> <!-- Ends edit_param_modal  -->
 <script type="text/javascript">
 
 $('#definition_add_edit_form')
@@ -243,6 +266,24 @@ function create_row(index, key, value) {
 }
 
 var ep_parms = [];
+
+$("#edit_recovery_modal_btn").click(function() {
+  var recoveries = $("#ae_recovery_definition_text").val();
+  var rlist = JSON.parse(recoveries);
+  $("#edit_recovery_modal").modal({
+    closable  : false,
+    onApprove : function(){
+      var rlist = []
+      for (i = 0; i < 10 ; i++) {
+         rlist.append( $("#re_recover_"+tostring(i)+":selected").val());
+      }
+      $("#ae_definition_recovery_text").val(JSON.stringify(rlist));
+    },
+    onDeny : function(){
+      $("#definition_add_edit_modal").modal('show');
+    },
+    }).modal('show');
+});
 
 $("#edit_param_modal_btn").click(function() {
   var parms_str = $("#ae_definition_parameters").val();
