--- a/webservice/templates/index.html
+++ b/webservice/templates/index.html
@@ -20,21 +20,18 @@
 {%endblock%}
 
 
-
-
-
-
 {%block subheader%}
 <h2 class="ui dividing header">Services</h2>
 {%endblock%}
 
 
-
 {%block content%}
 <div class="ui segment raised">
 Job launches: {{launches}}&nbsp;&nbsp; 
+ {% if (current_experimenter.is_root()) %} 
  <a href="set_job_launches?hold=allowed"><button class="tiny ui left attached button"><i class="play icon"></i>Allow</button></a>
- <a href="set_job_launches?hold=hold"><button class="tiny ui right attached button"><i class="stop icon"></i>Hold</button></a>
+ <a href="set_job_launches?hold=hold"><button class="tiny ui right attached button" ><i class="stop icon"></i>Hold</button></a>
+ {% endif %}
 </div>
 	   {{services}} 
 <h3> Key:</h3>
