--- a/webservice/templates/campaign_edit.html
+++ b/webservice/templates/campaign_edit.html
@@ -76,10 +76,12 @@
 	<td id="c_split_type_{{loop.index}}">{{row.cs_split_type}}</td>
 	<td id="c_param_overrides_{{loop.index}}">{{row.param_overrides|replace("None","")}}</td>
         <td id="c_depends_{{loop.index}}">
-            { "campaigns":[ {%for drow in data.depends%}{% if drow[0] == row.campaign_id %} "{{drow[1]}}"{%if not loop.last%},{%endif%}{% endif %}{% endfor %} ],
-             "file_patterns": [{%for drow in data.depends%}{% if drow[0] == row.campaign_id %} "{{drow[2]}}"{%if not loop.last%},{%endif%}{% endif %}{% endfor %} ]
-           }
-         </td>
+	  {% for key, value in data.depends.iteritems() %}
+	    {% if key == row.campaign_id %}
+	      {{ value }}
+            {% endif %}
+	  {% endfor %}
+        </td>
       </tr>
       {% endfor %}
     </tbody>
@@ -295,27 +297,46 @@
   </div>
   <div class="ui text container">
     <div class="scrollable">
-          <span style="padding: 0 2em; font-weight: bold">Campaign</span>
-          <span style="padding: 0 4em; font-weight: bold">File Pattern</span>
-          <br>
+      <table class="ui celled table" id="ep_table">
+	<thead>
+	  <tr>
+	    <th>Campaign</th>
+	    <th>File Pattern</th>
+	  </tr>
+	</thead>
+	<tbody id="ed_tbody">
           {% for i in range(5) %}
+	  <tr>
+	    <td>
              {{i}}. <select name="de_select_{{i}}" id="de_select_{{i}}">
                 <option value="">-</option>
                 {%for c in data['campaigns']%}
                    <option value="{{c.name}}">{{c.name}}</option>
                 {% endfor %}
-             </select> 
-            <input name="de_filepat_{{i}}" id="de_filepat_{{i}}">
-            <br>
+             </select>
+	    </td>
+	    <td>
+              <input name="de_filepat_{{i}}" id="de_filepat_{{i}}">
+	    </td>
+          </tr>
           {% endfor %}
-	  <div class="actions">
-	    <button class="ui button deny pink">Cancel</button>
-	    <button class="ui button approve teal" {{ 'disabled' if (data.authorized==False) }}>Accept</button>
-	  </div>
+	</tbody>
+	<tfoot>
+	  <tr>
+	    <th colspan="2">
+	      <div class="actions">
+		<button class="ui button deny pink">Cancel</button>
+		<button class="ui button approve teal" {{ 'disabled' if (data.authorized==False) }}>Accept</button>
+	      </div>
+	    </th>
+	  </tr>
+	</tfoot>
+      </table>
     </div>
   </div>
   <div class="ui hidden divider"></div>
 </div> <!-- Ends edit_depends_modal  -->
+
 
 <script type="text/javascript">
 
@@ -374,7 +395,7 @@ function create_row(index, key, value) {
 }
 
 var ep_parms = [];
-//spwspw
+
 $("#edit_param_modal_btn").click(function() {
   var parms_str = $("#ae_param_overrides").val();
   if (parms_str != "") {
@@ -563,7 +584,7 @@ function edit_campaign(index) {
   $("#ae_param_overrides_text").val( $("#c_param_overrides_"+index).text() );
   $("#ae_param_overrides_text").val( $("#c_param_overrides_"+index).text() );
   $("#ae_depends").val( $("#c_depends_"+index).text() );
-  $("#ae_depends_text").val( $("#c_depends_"+index).text() );
+  $("#ae_depends_text").val( $.trim( $("#c_depends_"+index).text() ));
   $("#ae_campaign_definition_id").val( $("#c_campaign_definition_id_"+index).text() );
   $("#ae_launch_id").val( $("#c_launch_id_"+index).text() );
   // Trigger the change function which will load associated fields
