--- a/webservice/templates/elasticsearch.html
+++ b/webservice/templates/elasticsearch.html
@@ -155,6 +155,11 @@
         th, td {
             padding: 3px 5px 5px 5px;
         }
+
+        .toggler
+        {
+            cursor:pointer;
+        }
         </style>
 
 
@@ -186,7 +191,7 @@
 
 
 
-                <table>
+                <table class="ui celled striped table">
 
 
                     <thead>
@@ -217,8 +222,8 @@
                                     <tbody>
                                         {% for key, value in record_meat.iteritems() %}
                                         <tr>
-                                            <td>{{ key|e }}</td>
-                                            <td width="1%"></td>
+                                            <td><b>{{ key|e }}</b></td>
+                                            <td width="1%" style="display:none;"></td>
                                             <td>{{ value|e }}</td>
                                         </tr>
                                         {% endfor %}
