added condor event logs to triage page

--- a/webservice/templates/triage_job.html
+++ b/webservice/templates/triage_job.html
@@ -274,4 +274,109 @@
 
 
 
+
+
+
+
+
+
+
+
+
+<h4 class="ui horizontal divider header">
+      <i class="lightning icon"></i>
+      Condor Event Logs
+</h4>
+
+
+        <style>
+        .hid {
+            display: none;
+            background-color: #efefef;
+        }
+
+        th, td {
+            padding: 3px 5px 5px 5px;
+        }
+
+        .toggler
+        {
+            cursor:pointer;
+        }
+        </style>
+
+
+
+        <script>
+            $( document ).ready(function() {
+                        $(".toggler").click(function(){
+                                $(this).closest('tr').next('tr').toggle();
+
+                                if ( $(this).text() == "+" )
+                                {
+                                    $(this).text("-");
+                                }
+                                else
+                                {
+                                    $(this).text("+");
+                                }
+                        });  //ends click handler
+            });  //ends dom ready
+        </script>
+
+
+
+                <table class="ui celled striped table">
+
+
+                    <thead>
+                        <tr>
+                            <th width="1%"></th>
+                            <th><span>Time</span></th>
+                            <th><span>Event</span></th>
+                        </tr>
+                    </thead>
+
+
+
+                    <tbody>  <!-- root tbody-->
+
+                    {% for record in es_response.get('hits').get('hits') %}
+                    {% set record_meat = record.get('_source') %}
+                        <!--item-->
+                        <tr>
+                            <td class="toggler">+</td>
+                            <td width="30%">{{record_meat.get("@timestamp")}}</td>
+                            <td>{{record_meat.get("event_message")}}</td>
+                        </tr>
+
+
+                        <tr class="hid">
+                            <td colspan="3">
+                                <table>
+                                    <tbody>
+                                        {% for key, value in record_meat.iteritems() %}
+                                        <tr>
+                                            <td><b>{{ key|e }}</b></td>
+                                            <td width="1%" style="display:none;"></td>
+                                            <td>{{ value|e }}</td>
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </td>
+                        </tr>
+                        <!--ends item-->
+                    {% endfor %}
+
+
+
+                    </tbody>  <!--ends root tbody-->
+
+                </table>  <!--ends root table-->
+
+<small>{{es_response.get('hits').get('total')}} records in {{es_response.get('took')}} ms</small>
+
+
+
 {%endblock%}
