breadcrumb fixes for jobs_eff_histo

--- a/webservice/templates/jobs_eff_histo.html
+++ b/webservice/templates/jobs_eff_histo.html
@@ -11,10 +11,10 @@
   <div class="divider"> / </div>
   <a href="{{pomspath}}/show_campaigns/" class="section">Campaigns</a>
   <div class="divider"> / </div>
-  <a href="{{pomspath}}/job_eff_histo&campaign_id={{campaign_id}}" class="section">Campaign {{cname}}</a>
+  <a href="{{pomspath}}/campaign_info?campaign_id={{campaign_id}}" class="section">{{c.name}}</a>
   <div class="divider"> / </div>
-</div>
   <div class="section">Jobs efficiency in campaign {{campaign_id}}</div>
+</div>
 {%endblock%}
 
 
