--- a/webservice/templates/campaign_sheet.html
+++ b/webservice/templates/campaign_sheet.html
@@ -9,7 +9,11 @@
 <div class="ui breadcrumb" style="margin-top: -45px;">
   <a href="{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
-  <div class="section">Info sheet for campaign {{name}}</div>
+  <a href="{{pomspath}}/show_campaigns/" class="section">Campaigns</a>
+  <div class="divider"> / </div>
+  <a href="{{pomspath}}/campaign_info?campaign_id={{campaign_id}}" class="section">{{name}}</a>
+  <div class="divider"> / </div>
+  <div class="section">Campaign Sheet</div>
 </div>
 {%endblock%}
 
@@ -18,9 +22,9 @@
 <h1 class="ui header">
   Info by day{%include 'help_button.html'%}
 </h1>
-<div class="ui subheader">
+<!--<div class="ui subheader">
 {{days}} Days ending  {{tmax}}
-</div>
+</div>-->
 
 <a href="{{prev}}">&lt;previous {{days}} days</a> | 
 <a href="{{next}}">next {{days}} days &gt;</a>
@@ -28,6 +32,9 @@
 
 
 {%block subheader%}
+<div class="ui basic label">
+  <i class="wait icon"></i>  <div class="tmin" style="display:inline;"></div> to <div class="tmax" style="display:inline;"></div>
+</div>
 {%endblock%}
 
 
@@ -67,6 +74,21 @@
   </tbody>
 </table>
 
+
+
+
+
+
+
+<script>
+var tmin_local_time = moment.utc('{{tmin}}').toDate();
+tmin_local_time = moment(tmin_local_time).format('YYYY-MM-DD HH:mm');
+$( ".tmin" ).html( tmin_local_time );
+
+var tmax_local_time = moment.utc('{{tmax}}').toDate();
+tmax_local_time = moment(tmax_local_time).format('YYYY-MM-DD HH:mm');
+$( ".tmax" ).html( tmax_local_time );
+</script>
 
 
 
