--- a/webservice/templates/campaign_task_files.html
+++ b/webservice/templates/campaign_task_files.html
@@ -19,7 +19,9 @@
   File Info by Submission {%include 'help_button.html'%}
 </h1>
 <div class="ui subheader">
-{{days}} Days ending  {{tmax}}
+    <div class="ui basic label">
+      <i class="wait icon"></i>  <div class="tmin" style="display:inline;"></div> to <div class="tmax" style="display:inline;"></div>
+    </div>
 </div>
 
 <a href="{{prev}}">&lt;previous {{days}} days</a> | 
@@ -56,6 +58,19 @@
     {%endfor%}
   </tbody>
 </table>
+
+
+
+
+<script>
+var tmin_local_time = moment.utc('{{tmin}}').toDate();
+tmin_local_time = moment(tmin_local_time).format('YYYY-MM-DD HH:mm');
+$( ".tmin" ).html( tmin_local_time );
+
+var tmax_local_time = moment.utc('{{tmax}}').toDate();
+tmax_local_time = moment(tmax_local_time).format('YYYY-MM-DD HH:mm');
+$( ".tmax" ).html( tmax_local_time );
+</script>
 
 
 
