got rid of opening new tabs in actions menu as it causes usability confusion

--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -186,13 +186,13 @@ $( document ).ready(function() {
           </div>
         -->
           <div class=item>
-            <a target="_blank" href="{{pomspath}}/campaign_task_files?campaign_id={{Campaign_info.Campaign.campaign_id}}"><i class="external file icon" data-content="List file statistics for Submissions for Campaign" data-variation="basic"></i>Campaign Submission Files</a>
+            <a href="{{pomspath}}/campaign_task_files?campaign_id={{Campaign_info.Campaign.campaign_id}}"><i class="external file icon" data-content="List file statistics for Submissions for Campaign" data-variation="basic"></i>Campaign Submission Files</a>
           </div>
           <div class=item>
-            <a target="_blank" href="{{pomspath}}/launch_jobs?campaign_id={{Campaign_info.Campaign.campaign_id}}"><i class="external rocket icon" data-content="Immediately Launch Submissions for Campaign" data-variation="basic"></i>Launch Campaign Jobs Now</a>
+            <a href="{{pomspath}}/launch_jobs?campaign_id={{Campaign_info.Campaign.campaign_id}}"><i class="external rocket icon" data-content="Immediately Launch Submissions for Campaign" data-variation="basic"></i>Launch Campaign Jobs Now</a>
           </div>
           <div class=item>
-            <a target="_blank" href="{{pomspath}}/kill_jobs?campaign_id={{Campaign_info.Campaign.campaign_id}}"><i class="external trash icon" data-content="Kill jobs in Campaign" data-variation="basic"></i>Kill Jobs for Campaign</a>
+            <a href="{{pomspath}}/kill_jobs?campaign_id={{Campaign_info.Campaign.campaign_id}}"><i class="external trash icon" data-content="Kill jobs in Campaign" data-variation="basic"></i>Kill Jobs for Campaign</a>
            </div>
           <div class=item>
           <a href="{{pomspath}}/schedule_launch?campaign_id={{Campaign_info.Campaign.campaign_id}}">
